Started preprocessing the data

--- a/deployment data/content based filtering.ipynb
+++ b/deployment data/content based filtering.ipynb
@@ -2,21 +2,145 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Change pandas settings so we can see the all columns in the dataframe\n",
+    "pd.set_option('max_columns', 99)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28891</td>\n",
+       "      <td>Haikyuu!! Second Season</td>\n",
+       "      <td>['Comedy', 'Sports', 'Drama', 'School', 'Shoun...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23273</td>\n",
+       "      <td>Shigatsu wa Kimi no Uso</td>\n",
+       "      <td>['Drama', 'Music', 'Romance', 'School', 'Shoun...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>34599</td>\n",
+       "      <td>Made in Abyss</td>\n",
+       "      <td>['Sci-Fi', 'Adventure', 'Mystery', 'Drama', 'F...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5114</td>\n",
+       "      <td>Fullmetal Alchemist: Brotherhood</td>\n",
+       "      <td>['Action', 'Military', 'Adventure', 'Comedy', ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>31758</td>\n",
+       "      <td>Kizumonogatari III: Reiketsu-hen</td>\n",
+       "      <td>['Action', 'Mystery', 'Supernatural', 'Vampire']</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   anime_id                              name  \\\n",
+       "0     28891           Haikyuu!! Second Season   \n",
+       "1     23273           Shigatsu wa Kimi no Uso   \n",
+       "2     34599                     Made in Abyss   \n",
+       "3      5114  Fullmetal Alchemist: Brotherhood   \n",
+       "4     31758  Kizumonogatari III: Reiketsu-hen   \n",
+       "\n",
+       "                                               genre  \n",
+       "0  ['Comedy', 'Sports', 'Drama', 'School', 'Shoun...  \n",
+       "1  ['Drama', 'Music', 'Romance', 'School', 'Shoun...  \n",
+       "2  ['Sci-Fi', 'Adventure', 'Mystery', 'Drama', 'F...  \n",
+       "3  ['Action', 'Military', 'Adventure', 'Comedy', ...  \n",
+       "4   ['Action', 'Mystery', 'Supernatural', 'Vampire']  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anime_df = pd.read_csv(\"cleaned_anime.csv\")\n",
+    "anime_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anime_df.dropna(subset=[\"genre\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\Jeff\\\\Desktop\\\\Other Stuff\\\\Programming Stuff\\\\Data Science\\\\Anime-Recommendations\\\\deployment data'"
+       "\"['Comedy', 'Sports', 'Drama', 'School', 'Shounen']\""
       ]
      },
-     "execution_count": 1,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "anime_df.loc[0, \"genre\"]"
+   ]
   },
   {
    "cell_type": "code",
