Fixed badly formatted genre values in anime dataframe

--- a/deployment data/data cleaning.ipynb
+++ b/deployment data/data cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "9  https://myanimelist.net/anime/2904/Code_Geass_...  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "4   ['Action', 'Mystery', 'Supernatural', 'Vampire']  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "4   ['Action', 'Mystery', 'Supernatural', 'Vampire']  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"['Comedy', 'Sports', 'Drama', 'School', 'Shounen']\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(type(anime_df[\"genre\"][0]))\n",
+    "anime_df[\"genre\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anime_df[\"genre\"] = anime_df[\"genre\"].str.replace(\"'\", \"\").str.strip(\"][\").str.split(\", \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Comedy', 'Sports', 'Drama', 'School', 'Shounen']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(type(anime_df[\"genre\"][0]))\n",
+    "anime_df[\"genre\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +585,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +721,7 @@
        "4  https://myanimelist.net/reviews.php?id=291149  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +807,7 @@
        "4  291149       4181     10"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +892,7 @@
        "4   291149      4181      10"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +916,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +939,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +959,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11], dtype=int64)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +1017,7 @@
        "119190   252847       413      11"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1068,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1125,7 @@
        "63039     6424       226       0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,20 +1136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "anime_df.to_csv(\"cleaned_anime.csv\", index=False)\n",
     "rating_df.to_csv(\"cleaned_rating.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
