Will need to restart ratings dataset cleaning in light of new information

--- a/deployment data/content based filtering.ipynb
+++ b/deployment data/content based filtering.ipynb
@@ -719,6 +719,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "321144    4\n",
+       "321148    4\n",
+       "321183    4\n",
+       "322786    4\n",
+       "321837    4\n",
+       "         ..\n",
+       "278638    1\n",
+       "282732    1\n",
+       "298151    1\n",
+       "324776    1\n",
+       "252752    1\n",
+       "Name: user_id, Length: 130519, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df[\"user_id\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
