--- a/deployment data/data cleaning.ipynb
+++ b/deployment data/data cleaning.ipynb
@@ -1136,6 +1136,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>163348</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36254</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66934</th>\n",
+       "      <td>9</td>\n",
+       "      <td>856</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163484</th>\n",
+       "      <td>10</td>\n",
+       "      <td>263</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36318</th>\n",
+       "      <td>10</td>\n",
+       "      <td>263</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53898</th>\n",
+       "      <td>325734</td>\n",
+       "      <td>21339</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176806</th>\n",
+       "      <td>325738</td>\n",
+       "      <td>34798</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43185</th>\n",
+       "      <td>325738</td>\n",
+       "      <td>34798</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46087</th>\n",
+       "      <td>325747</td>\n",
+       "      <td>849</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181060</th>\n",
+       "      <td>325747</td>\n",
+       "      <td>849</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>192112 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        user_id  anime_id  rating\n",
+       "163348        1         1      10\n",
+       "36254         1         1      10\n",
+       "66934         9       856       8\n",
+       "163484       10       263      10\n",
+       "36318        10       263      10\n",
+       "...         ...       ...     ...\n",
+       "53898    325734     21339       7\n",
+       "176806   325738     34798      10\n",
+       "43185    325738     34798      10\n",
+       "46087    325747       849       8\n",
+       "181060   325747       849       8\n",
+       "\n",
+       "[192112 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df.sort_values(\"user_id\", inplace=True)\n",
+    "rating_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
