Changed all the code to fit new data

--- a/deployment data/content based filtering.ipynb
+++ b/deployment data/content based filtering.ipynb
@@ -658,7 +658,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
+       "      <th>user</th>\n",
        "      <th>anime_id</th>\n",
        "      <th>rating</th>\n",
        "    </tr>\n",
@@ -666,32 +666,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>255938</td>\n",
-       "      <td>34096</td>\n",
-       "      <td>8</td>\n",
+       "      <td>-----noname-----</td>\n",
+       "      <td>18441</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>259117</td>\n",
-       "      <td>34599</td>\n",
-       "      <td>10</td>\n",
+       "      <td>-----noname-----</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>253664</td>\n",
-       "      <td>28891</td>\n",
-       "      <td>7</td>\n",
+       "      <td>---SnowFlake---</td>\n",
+       "      <td>1535</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>8254</td>\n",
-       "      <td>2904</td>\n",
-       "      <td>9</td>\n",
+       "      <td>---was-----</td>\n",
+       "      <td>10110</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>291149</td>\n",
-       "      <td>4181</td>\n",
+       "      <td>--EYEPATCH--</td>\n",
+       "      <td>35839</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -699,12 +699,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   user_id  anime_id  rating\n",
-       "0   255938     34096       8\n",
-       "1   259117     34599      10\n",
-       "2   253664     28891       7\n",
-       "3     8254      2904       9\n",
-       "4   291149      4181      10"
+       "               user  anime_id  rating\n",
+       "0  -----noname-----     18441       2\n",
+       "1  -----noname-----      2025       4\n",
+       "2   ---SnowFlake---      1535       6\n",
+       "3       ---was-----     10110       8\n",
+       "4      --EYEPATCH--     35839      10"
       ]
      },
      "execution_count": 8,
@@ -719,44 +719,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "321144    4\n",
-       "321148    4\n",
-       "321183    4\n",
-       "322786    4\n",
-       "321837    4\n",
-       "         ..\n",
-       "278638    1\n",
-       "282732    1\n",
-       "298151    1\n",
-       "324776    1\n",
-       "252752    1\n",
-       "Name: user_id, Length: 130519, dtype: int64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rating_df[\"user_id\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "227206"
+       "Sidewinder51    611\n",
+       "Stark700        537\n",
+       "ktulu007        482\n",
+       "LegendAqua      442\n",
+       "ggultra2764     355\n",
+       "               ... \n",
+       "caldxm            1\n",
+       "liabia            1\n",
+       "Marii-nyan        1\n",
+       "KykyGhibli        1\n",
+       "aaronschmit       1\n",
+       "Name: user, Length: 47885, dtype: int64"
       ]
      },
      "execution_count": 10,
@@ -765,13 +745,34 @@
     }
    ],
    "source": [
-    "import random\n",
-    "random.choice(rating_df[\"user_id\"])"
+    "rating_df[\"user\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Vaenny'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "random.seed(5)\n",
+    "random.choice(rating_df[\"user\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -802,94 +803,372 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>33080</td>\n",
+       "      <td>15583</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8675</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1824</td>\n",
        "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23289</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9253</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>19815</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>30014</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>37281</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10417</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>8861</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>31952</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>6392</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>32281</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>30015</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14199</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>23233</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>12367</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>22865</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>32542</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>31798</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>6201</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>811</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>10396</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>31964</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>17827</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>31442</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>23037</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>21561</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>29758</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>33204</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>3958</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>31953</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>28155</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>28725</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>23079</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>27787</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>670</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>31404</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>31804</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>24705</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>30307</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>28221</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>34823</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>25157</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>30740</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>22147</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>38826</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>32438</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>24439</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>4548</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>28999</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>32093</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>34498</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>17729</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>28623</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>29803</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>31240</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>32608</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   anime_id  rating\n",
-       "0     33080       8"
+       "    anime_id  rating\n",
+       "0      15583       6\n",
+       "1       8675       9\n",
+       "2       1824       8\n",
+       "3      23289       8\n",
+       "4       9253       9\n",
+       "5      19815       8\n",
+       "6      30014       7\n",
+       "7      37281       6\n",
+       "8      10417       8\n",
+       "9       8861       9\n",
+       "10     31952       8\n",
+       "11      6392       6\n",
+       "12     32281      10\n",
+       "13     30015       7\n",
+       "14     14199       6\n",
+       "15     23233       7\n",
+       "16     12367       6\n",
+       "17     22865       7\n",
+       "18     32542       9\n",
+       "19     31798       8\n",
+       "20      6201       9\n",
+       "21       811       7\n",
+       "22     10396       8\n",
+       "23     31964       9\n",
+       "24     17827       7\n",
+       "25     31442       7\n",
+       "26     23037       5\n",
+       "27     21561       7\n",
+       "28     29758       6\n",
+       "29     33204       6\n",
+       "30      3958       7\n",
+       "31     31953       7\n",
+       "32     28155       7\n",
+       "33     28725      10\n",
+       "34     23079       6\n",
+       "35     27787       7\n",
+       "36       670       5\n",
+       "37     31404       8\n",
+       "38     31804       7\n",
+       "39     24705       6\n",
+       "40     30307       7\n",
+       "41     28221       7\n",
+       "42     34823       3\n",
+       "43     25157       7\n",
+       "44     30740       6\n",
+       "45     22147       9\n",
+       "46     38826       9\n",
+       "47     32438       5\n",
+       "48     24439       8\n",
+       "49      4548       5\n",
+       "50     28999       9\n",
+       "51     32093       8\n",
+       "52     34498       8\n",
+       "53     17729       9\n",
+       "54     28623       8\n",
+       "55     29803       7\n",
+       "56     31240       8\n",
+       "57     32608       4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "user_df = rating_df[rating_df[\"user_id\"]==227206]\n",
+    "user_df = rating_df[rating_df[\"user\"]==\"Vaenny\"]\n",
     "\n",
     "# Reset the indexes\n",
     "user_df.reset_index(drop=True, inplace=True)\n",
     "# Drop the columns that are not needed\n",
-    "user_df = user_df.drop(\"user_id\", axis=1)\n",
-    "user_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>anime_id</th>\n",
-       "      <th>rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>36254</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>163348</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        user_id  anime_id  rating\n",
-       "36254         1         1      10\n",
-       "163348        1         1      10"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "user_df = rating_df[rating_df[\"user_id\"]==1]\n",
+    "user_df = user_df.drop(\"user\", axis=1)\n",
     "user_df"
    ]
   },
