--- a/deployment data/data cleaning.ipynb
+++ b/deployment data/data cleaning.ipynb
@@ -508,71 +508,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"['Comedy', 'Sports', 'Drama', 'School', 'Shounen']\""
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(type(anime_df[\"genre\"][0]))\n",
-    "anime_df[\"genre\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anime_df[\"genre\"] = anime_df[\"genre\"].str.replace(\"'\", \"\").str.strip(\"][\").str.split(\", \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['Comedy', 'Sports', 'Drama', 'School', 'Shounen']"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(type(anime_df[\"genre\"][0]))\n",
-    "anime_df[\"genre\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [
@@ -592,6 +527,210 @@
    ],
    "source": [
     "anime_df.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>764</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Cowboy Bebop</td>\n",
+       "      <td>[Action, Adventure, Comedy, Drama, Sci-Fi, Space]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18062</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Cowboy Bebop</td>\n",
+       "      <td>[Action, Adventure, Comedy, Drama, Sci-Fi, Space]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15230</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Cowboy Bebop: Tengoku no Tobira</td>\n",
+       "      <td>[Action, Drama, Mystery, Sci-Fi, Space]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>644</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Cowboy Bebop: Tengoku no Tobira</td>\n",
+       "      <td>[Action, Drama, Mystery, Sci-Fi, Space]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Trigun</td>\n",
+       "      <td>[Action, Sci-Fi, Adventure, Comedy, Drama, Sho...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15045</th>\n",
+       "      <td>40936</td>\n",
+       "      <td>Ore wo Suki nano wa Omae dake ka yo: Oretachi ...</td>\n",
+       "      <td>[Comedy, Romance, School]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15067</th>\n",
+       "      <td>40938</td>\n",
+       "      <td>Hige wo Soru. Soshite Joshikousei wo Hirou.</td>\n",
+       "      <td>[Drama, Romance]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1511</th>\n",
+       "      <td>40938</td>\n",
+       "      <td>Hige wo Soru. Soshite Joshikousei wo Hirou.</td>\n",
+       "      <td>[Drama, Romance]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3028</th>\n",
+       "      <td>40957</td>\n",
+       "      <td>Shin Chuuka Ichiban! 2</td>\n",
+       "      <td>[Comedy, Shounen]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14699</th>\n",
+       "      <td>40957</td>\n",
+       "      <td>Shin Chuuka Ichiban! 2</td>\n",
+       "      <td>[Comedy, Shounen]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6140 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       anime_id                                               name  \\\n",
+       "764           1                                       Cowboy Bebop   \n",
+       "18062         1                                       Cowboy Bebop   \n",
+       "15230         5                    Cowboy Bebop: Tengoku no Tobira   \n",
+       "644           5                    Cowboy Bebop: Tengoku no Tobira   \n",
+       "542           6                                             Trigun   \n",
+       "...         ...                                                ...   \n",
+       "15045     40936  Ore wo Suki nano wa Omae dake ka yo: Oretachi ...   \n",
+       "15067     40938        Hige wo Soru. Soshite Joshikousei wo Hirou.   \n",
+       "1511      40938        Hige wo Soru. Soshite Joshikousei wo Hirou.   \n",
+       "3028      40957                             Shin Chuuka Ichiban! 2   \n",
+       "14699     40957                             Shin Chuuka Ichiban! 2   \n",
+       "\n",
+       "                                                   genre  \n",
+       "764    [Action, Adventure, Comedy, Drama, Sci-Fi, Space]  \n",
+       "18062  [Action, Adventure, Comedy, Drama, Sci-Fi, Space]  \n",
+       "15230            [Action, Drama, Mystery, Sci-Fi, Space]  \n",
+       "644              [Action, Drama, Mystery, Sci-Fi, Space]  \n",
+       "542    [Action, Sci-Fi, Adventure, Comedy, Drama, Sho...  \n",
+       "...                                                  ...  \n",
+       "15045                          [Comedy, Romance, School]  \n",
+       "15067                                   [Drama, Romance]  \n",
+       "1511                                    [Drama, Romance]  \n",
+       "3028                                   [Comedy, Shounen]  \n",
+       "14699                                  [Comedy, Shounen]  \n",
+       "\n",
+       "[6140 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicateRowsDF = anime_df[anime_df.duplicated(subset=[\"anime_id\"], keep=False) == True].sort_values(\"anime_id\")\n",
+    "duplicateRowsDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anime_df.drop_duplicates(subset=\"anime_id\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [anime_id, name, genre]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicateRowsDF = anime_df[anime_df.duplicated(subset=[\"anime_id\"], keep=False) == True].sort_values(\"anime_id\")\n",
+    "duplicateRowsDF"
    ]
   },
   {
@@ -1864,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
